# SFML_starter

./: CMakeLists.txt  README.md
libraries/SFML/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
libraries/SFML/lib/cmake/SFML/: SFMLSharedTargets.cmake
libraries/SFML/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
